# librevault

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Cargo.toml  Dependencies.md  Install.cmake  Jenkinsfile  LICENSE  Librevault Configuration.md  Readme.md  appver.in.h  conanfile.py  conanfile.txt  pyproject.toml  rust-toolchain.toml  rustfmt.toml  snapcraft.yaml  version.in.h
cli/: CMakeLists.txt  CliApplication.cpp  CliApplication.h
common/: AbstractConfig.h  CMakeLists.txt  QSecret.h  Tokens.h  conv_bitarray.h  conv_bitfield.cpp  conv_bitfield.h  exception_helper.hpp  human_size.h  tokens.h
common/config/: AbstractConfig.h  ClientSettings.cpp  ClientSettings.h  ConfigModel.cpp  ConfigModel.h  FolderParams.h  FolderSettings.cpp  FolderSettings.h  FolderSettings_fwd.h  models.cpp  models.h  models_fwd.h
common/crypto/: AES_CBC.cpp  Base32.cpp  Base32.h  LuhnModN.h
common/hiersvc/: HierarchicalService.cpp  HierarchicalService.h
common/secret/: Secret.cpp  Secret.h
common/util/: Endpoint.cpp  Endpoint.h  blob.h  human_size.h  rand.h
components/aes/: AES_CBC.cpp  AES_CBC.h  CMakeLists.txt
components/base32/: Base32.cpp  Base32.h  CMakeLists.txt
components/discovery/: CMakeLists.txt
components/meta/: CMakeLists.txt  ChunkInfo.cpp  ChunkInfo.h  ChunkInfo_p.h  EncryptedData.cpp  EncryptedData.h  Inode.cpp  Inode.h  Inode_p.h  Meta.cpp  Meta.h  Meta.proto  MetaInfo.cpp  MetaInfo.h  MetaInfo_p.h  Meta_p.h  SignedMeta.cpp  SignedMeta.h
components/metakit/: CMakeLists.txt  metakit.cpp  metakit.h  path_normalizer.cpp  path_normalizer.h  timestamp_granularity.h
components/pathnormalizer/: CMakeLists.txt  PathNormalizer.cpp  PathNormalizer.h
components/portmapping/: CMakeLists.txt  GenericNatService.cpp  GenericNatService.h  NATPMPService.cpp  NATPMPService.h  NatPmpService.cpp  NatPmpService.h  PortMapper.cpp  PortMapper.h  UPnPService.cpp  UPnPService.h  UpnpService.cpp  UpnpService.h
components/protocol/: CMakeLists.txt  Parser.cpp  Parser.h  ProtocolParser.cpp  ProtocolParser.h  ProtocolServer.cpp  ProtocolServer.h  ProtocolV2.proto  V1Parser.cpp  V1Parser.h  V1Protocol.proto  V2Protocol.proto
components/secret/: Base58.cpp  Base58.h  CMakeLists.txt  Secret.cpp  Secret.h  SecretPrivate.h
contrib/qtsingleapplication/: CMakeLists.txt
daemon/: CMakeLists.txt  Client.cpp  Client.h  MLDHTSessionFile.proto  MulticastDiscovery.proto  Version.cpp  Version.h  main.cpp  pch.h
daemon/adapters/: DiscoveryAdapter.cpp  DiscoveryAdapter.h
daemon/control/: Config.bsd.cpp  Config.cpp  Config.h  Config.linux.cpp  Config.mac.mm  Config.win.cpp  ConfigModel.h  Config_mac.mm  ControlHTTPServer.cpp  ControlHTTPServer.h  ControlServer.cpp  ControlServer.h  ControlWebsocketServer.cpp  ControlWebsocketServer.h  FolderParams.cpp  FolderParams.h  FolderSettings.cpp  FolderSettings.h  Paths.bsd.cpp  Paths.cpp  Paths.h  Paths.linux.cpp  Paths.mac.mm  Paths.win.cpp  PersistentConfiguration.cpp  PersistentConfiguration.h  SettingsStorage.cpp  SettingsStorage.h  StateCollector.cpp  StateCollector.h
daemon/discovery/: Discovery.cpp  Discovery.h  DiscoveryGroup.cpp  DiscoveryGroup.h  DiscoveryInstance.cpp  DiscoveryInstance.h  DiscoveryResult.cpp  DiscoveryResult.h  DiscoveryService.cpp  DiscoveryService.h  DiscoverySubService.cpp  DiscoverySubService.h  StaticDiscovery.cpp  StaticDiscovery.h  StaticGroup.cpp  StaticGroup.h  btcompat.h
daemon/folder/: AbstractFolder.cpp  AbstractFolder.h  Downloader.cpp  Downloader.h  FolderController.cpp  FolderController.h  FolderGroup.cpp  FolderGroup.h  FolderService.cpp  FolderService.h  IgnoreList.cpp  IgnoreList.h  PathNormalizer.cpp  PathNormalizer.h  PeerPool.cpp  PeerPool.h  RemoteFolder.cpp  RemoteFolder.h  Uploader.cpp  Uploader.h
daemon/nat/: NATPMPService.cpp  NATPMPService.h  PortMappingService.cpp  PortMappingService.h  PortMappingSubService.h  UPnPService.cpp  UPnPService.h
daemon/nodekey/: NodeKey.cpp  NodeKey.h
daemon/p2p/: BandwidthCounter.cpp  BandwidthCounter.h  HandshakeHandler.cpp  HandshakeHandler.h  MessageHandler.cpp  MessageHandler.h  P2PFolder.cpp  P2PFolder.h  P2PProvider.cpp  P2PProvider.h  Peer.cpp  Peer.h  PeerPool.cpp  PeerPool.h  PeerServer.cpp  PeerServer.h  PingHandler.cpp  PingHandler.h  TimeoutHandler.cpp  TimeoutHandler.h  WSClient.cpp  WSClient.h  WSServer.cpp  WSServer.h  WSService.cpp  WSService.h  websocket_config.h
daemon/resources/: folders.json  globals.json
daemon/util/: AvailabilityMap.h  BandwidthCounter.cpp  BandwidthCounter.h  Endpoint.cpp  Loggable.h  MergePatch.h  SQLiteWrapper.cpp  SQLiteWrapper.h  blob.h  byte_convert.h  conv_bitarray.h  conv_fspath.h  exception.hpp  file_util.h  fs.h  log.h  log_scope.h  make_relpath.h  multi_io_service.cpp  multi_io_service.h  network.h  parse_url.cpp  parse_url.h  periodic_process.h  readable.cpp  readable.h  regex_escape.h  scoped_async_queue.h  scoped_timer.h
daemon/webserver/: HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  Session.cpp  Session.h  UndefinedSession.cpp  UndefinedSession.h  Webserver.cpp  Webserver.h
gui/: CMakeLists.txt  Client.cpp  Client.h  main.cpp  main.win.cpp  pch.h
gui/control/: ControlClient.cpp  ControlClient.h  Daemon.cpp  Daemon.h  Daemon.linux.cpp  Daemon.mac.cpp  Daemon.win.cpp  DaemonProcess.bsd.cpp  DaemonProcess.cpp  DaemonProcess.mac.cpp  DaemonProcess.win.cpp  GenericRemoteDictionary.cpp  GenericRemoteDictionary.h  RemoteConfig.cpp  RemoteConfig.h  RemoteState.cpp  RemoteState.h
gui/gui/: AddFolder.cpp  AddFolder.h  AddFolder.ui  FolderProperties.cpp  FolderProperties.h  FolderProperties.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenLink.cpp  OpenLink.h  OpenLink.ui  Settings.cpp  Settings.h  Settings.ui  Settings_General.ui  Settings_Network.ui  StartupInterface.h  StatusBar.cpp  StatusBar.h
gui/icons/: GUIIconProvider.cpp  (+1 more)
lvproto/: CMakeLists.txt  Dependencies.md
(+1156 files in other folders)
